fomratting, review comments